--- a/galaxy.yml
+++ b/galaxy.yml
@@ -43,16 +43,16 @@ tags: []
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/ionsio/oxygen
+repository: https://github.com/colvern/oxygen
 
 # The URL to any online docs
-documentation: https://github.com/ionsio/oxygen/blob/main/README.md
+documentation: https://github.com/colvern/oxygen/blob/main/README.md
 
 # The URL to the homepage of the collection/project
-homepage: https://github.com/ionsio/oxygen
+homepage: https://github.com/colvern/oxygen
 
 # The URL to the collection issue tracker
-issues: https://github.com/ionsio/oxygen/issues
+issues: https://github.com/colvern/oxygen/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
