--- a/helium-playbook.yml
+++ b/helium-playbook.yml
@@ -13,3 +13,11 @@
 # limitations under the License.
 
 ---
+- hosts: server
+
+  pre_tasks:
+    - name: Include helium vault
+      include_vars: "helium.vault.yml"
+
+  roles:
+    - { role: roles/helium }
