--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -28,27 +28,10 @@
     name: passlib
   tags: [ argon, nginx ]
 
-- name: Create the nginx configuration file
-  template:
-    src: argon.sh.j2
-    dest: /etc/nginx/sites-available/argon.sh
-    backup: yes
-    mode: '0644'
-  notify: reload nginx
-  tags: [ argon, nginx ]
-
 - name: Ensure that the default site is disabled
   file:
     path: /etc/nginx/sites-enabled/default
     state: absent
-  notify: reload nginx
-  tags: [ argon, nginx ]
-
-- name: Ensure that argon site is enabled
-  file:
-    src: /etc/nginx/sites-available/argon.sh
-    dest: /etc/nginx/sites-enabled/argon.sh
-    state: link
   notify: reload nginx
   tags: [ argon, nginx ]
 
@@ -59,20 +42,11 @@
     enabled: yes
   tags: [ argon, nginx ]
 
-- name: Setup logrotate scripts
+- name: Setup logrotate scripts for nginx
   template:
     src: logrotate.d.j2
     dest: /etc/logrotate.d/{{ item.name }}
     mode: "0644"
   with_items: "{{ nginx_logrotate_scripts }}"
   when: nginx_logrotate_scripts is defined
-  tags: [ argon, nginx ]
-
-- name: Block access to port 8000 except from localhost
-  shell: |
-    iptables -A INPUT -p tcp -s localhost --dport 8000 -j ACCEPT
-    iptables -A INPUT -p tcp --dport 8000 -j DROP
-
-    iptables-save > /etc/iptables/rules.v4
-  become: yes
   tags: [ argon, nginx ]
