--- a/roles/database/vars/main.yml
+++ b/roles/database/vars/main.yml
@@ -15,7 +15,7 @@
 ---
 root_username: root
 root_password: R2ZBmTR6nED6a71AxeTO2DSc
-app_db_name: ionsio
+app_db_name: helium
 app_db_username: admin
 app_db_password: R2ZBmTR6nED6a71AxeTO2UIo
 allow_access_from: "127.0.0.1"
