--- a/roles/helium/tasks/deploy.yml
+++ b/roles/helium/tasks/deploy.yml
@@ -17,49 +17,30 @@
   file:
     path: /srv/app/releases/{{ app_version }}
     state: absent
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Clone project code
   git:
     repo: "{{ git_repo }}"
     dest: /srv/app/releases/{{ app_version }}
     version: "{{ app_version }}"
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
-- name: Create entry point
-  template:
-    src: entry_point.sh.j2
-    dest: /srv/app/releases/{{ app_version }}/entry_point.sh
+- name: Ensure cache directory exists
+  file:
+    path: /srv/app/releases/{{ app_version }}/var/cache
+    owner: "{{ app_user }}"
+    group: "{{ app_group }}"
     mode: '0755'
-  tags: [ deploy ]
-
-- name: Create migrate script
-  template:
-    src: migrate.sh.j2
-    dest: /srv/app/releases/{{ app_version }}/migrate.sh
-    mode: '0755'
-  tags: [ deploy ]
+    state: directory
+  tags: [ argon, helium ]
 
 - name: Create .env config file
   template:
     src: env.j2
     dest: /srv/app/releases/{{ app_version }}/.env
     mode: '0755'
-  tags: [ deploy ]
-
-- name: Create newrelic.ini config file
-  template:
-    src: newrelic.j2
-    dest: /srv/app/releases/{{ app_version }}/newrelic.ini
-    mode: '0755'
-  tags: [ deploy ]
-
-- name: Setup latest release virtualenv
-  shell: /srv/app/releases/{{ app_version }}/entry_point.sh >> /srv/app/releases/{{ app_version }}/deploy.txt
-  args:
-    creates: /srv/app/releases/{{ app_version }}/deploy.txt
-    executable: /bin/bash
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Update current release symlink
   file:
@@ -67,20 +48,20 @@
     dest: /srv/app/current
     state: link
   notify: restart nginx
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Remove current release logs
   file:
-    path: /srv/app/releases/{{ app_version }}/storage/logs
+    path: /srv/app/releases/{{ app_version }}/var/log
     state: absent
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Update logs symlink
   file:
-    src: /srv/app/shared/logs
-    dest: /srv/app/releases/{{ app_version }}/storage/logs
+    src: /srv/app/shared/log
+    dest: /srv/app/releases/{{ app_version }}/var/log
     state: link
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Update release owner and permissions
   file:
@@ -89,7 +70,7 @@
     group: "www-data"
     mode: "0755"
     recurse: yes
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Update current release owner and permissions
   file:
@@ -97,72 +78,57 @@
     owner: "{{ app_user }}"
     group: "www-data"
     mode: "0755"
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Update logs owner and permissions
   file:
-    dest: /srv/app/shared/logs
+    dest: /srv/app/shared/log
     owner: "{{ app_user }}"
     group: "www-data"
     mode: "0755"
     recurse: yes
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
 - name: Migrate database
-  shell: /srv/app/releases/{{ app_version }}/migrate.sh >> /srv/app/releases/{{ app_version }}/migrate.txt
+  shell: php /srv/app/releases/{{ app_version }}/bin/console doctrine:schema:update --force >> /srv/app/releases/{{ app_version }}/migrate.log
   args:
-    creates: /srv/app/releases/{{ app_version }}/migrate.txt
+    creates: /srv/app/releases/{{ app_version }}/migrate.log
     executable: /bin/bash
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
-- name: Create ionsio service file
+- name: Create helium watcher service file
   template:
-    src: ionsio.service.j2
-    dest: /etc/systemd/system/ionsio.service
+    src: watcher.service.j2
+    dest: /etc/systemd/system/helium_watcher.service
     mode: "0750"
-  notify: reload ionsio service
-  tags: [ deploy ]
+  notify: reload helium watcher service
+  tags: [ argon, helium ]
 
-- name: Enable and start ionsio service
+- name: Enable and start helium watcher service
   systemd:
-    name: ionsio
+    name: helium_watcher
     state: started
     enabled: yes
-  tags: [ deploy ]
+  tags: [ argon, helium ]
 
-- name: Pause for 2 seconds
-  pause:
-    seconds: 2
-
-- name: restart ionsio service
+- name: restart helium watcher service
   systemd:
     state: restarted
-    name: ionsio
-  tags: [ deploy ]
+    name: helium_watcher
+  tags: [ argon, helium ]
 
-- name: Create ionsio workers service file
+- name: Create helium workers service file
   template:
     src: worker.service.j2
-    dest: /etc/systemd/system/worker@.service
+    dest: /etc/systemd/system/helium_worker@.service
     mode: "0750"
-  notify: reload workers service
-  tags: [ deploy ]
+  notify: reload helium workers service
+  tags: [ argon, helium ]
 
-- name: Enable and start ionsio workers service
+- name: Enable and start helium workers service
   systemd:
-    name: worker@{{ item }}
+    name: helium_worker@{{ item }}
     state: started
     enabled: yes
   with_sequence: start=1 end="{{ workers_counts }}"
-  tags: [ deploy ]
-
-- name: Pause for 2 seconds
-  pause:
-    seconds: 2
-
-- name: restart ionsio workers service
-  systemd:
-    state: restarted
-    name: worker@{{ item }}
-  with_sequence: start=1 end="{{ workers_counts }}"
-  tags: [ deploy ]
+  tags: [ argon, helium ]
