--- a/roles/helium/tasks/pre-deploy.yml
+++ b/roles/helium/tasks/pre-deploy.yml
@@ -50,3 +50,12 @@
     mode: '0755'
     state: directory
   tags: [ argon, helium ]
+
+- name: Setup logrotate scripts for nginx
+  template:
+    src: logrotate.d.j2
+    dest: /etc/logrotate.d/{{ item.name }}
+    mode: "0644"
+  with_items: "{{ helium_logrotate_scripts }}"
+  when: helium_logrotate_scripts is defined
+  tags: [ argon, helium ]
