--- a/roles/helium/vars/main.yml
+++ b/roles/helium/vars/main.yml
@@ -28,8 +28,8 @@ helium_logrotate_scripts:
 app_user: appmgmt
 app_group: appmgmt
 
-app_version: 0.1.0
-git_repo: https://github.com/ionsio/helium.git
+app_version: 0.3.0
+git_repo: git@github.com:ionsio/Helium.git
 
 workers_counts: 1
 
@@ -39,7 +39,7 @@ php_version: 8.1
 
 app_db_name: helium
 app_db_username: admin
-app_db_password: R2ZBmTR6nED6a71AxeTO2UIo
+app_db_password: R2ZBmTR6nED6a71AxeTO2UIok
 
 app_secret: 3999bf7e3a408f15942779447e01dd7a
 app_timezone: UTC
