--- a/examples/ubuntu/requirements.yml
+++ b/examples/ubuntu/requirements.yml
@@ -13,11 +13,7 @@
 # limitations under the License.
 
 ---
-- hosts: server
-
-  pre_tasks:
-    - name: Include helium vault
-      include_vars: "helium.vault.yml"
-
-  roles:
-    - { role: roles/helium, become: yes }
+collections:
+  - name: https://github.com/clivern/oxygen
+    type: git
+    version: 1.2.0
