--- a/roles/postfix/vars/main.yml
+++ b/roles/postfix/vars/main.yml
@@ -13,16 +13,18 @@
 # limitations under the License.
 
 ---
-- hosts: server
+postfix_hostname: helium
 
-  pre_tasks:
-    - name: Include prod vault
-      include_vars: "prod.vault.yml"
+smtp_sasl_security_options: noanonymous
+smtp_sasl_auth_enable: 'yes'
+smtp_use_tls: 'yes'
 
-  roles:
-    - { role: roles/common, become: yes }
-    - { role: roles/database, become: yes, when: install_mysql == true }
-    - { role: roles/nginx, become: yes, when: install_nginx == true }
-    - { role: roles/php, become: yes, when: install_php == true }
-    - { role: roles/composer, become: yes, when: install_composer == true }
-    - { role: roles/postfix, become: yes, when: install_postfix == true }
+smtp_server: smtp.gmail.com
+smtp_port: 587
+
+smtp_username: ''
+# please check this guide to generate app password
+# for gmail smtp server https://www.golinuxcloud.com/gmail-smtp-relay-server-postfix/
+smtp_password: ''
+
+inet_interfaces: 127.0.0.1
