--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,7 +5,7 @@
 namespace: clivern
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: argon
+name: oxygen
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.0.0
@@ -43,16 +43,16 @@ tags: []
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/ionsio/argon
+repository: https://github.com/ionsio/oxygen
 
 # The URL to any online docs
-documentation: https://github.com/ionsio/argon/blob/main/README.md
+documentation: https://github.com/ionsio/oxygen/blob/main/README.md
 
 # The URL to the homepage of the collection/project
-homepage: https://github.com/ionsio/argon
+homepage: https://github.com/ionsio/oxygen
 
 # The URL to the collection issue tracker
-issues: https://github.com/ionsio/argon/issues
+issues: https://github.com/ionsio/oxygen/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
