--- a/roles/composer/meta/main.yml
+++ b/roles/composer/meta/main.yml
@@ -15,12 +15,8 @@
 ---
 galaxy_info:
   author: clivern
-  description: Deploys the Application
+  description: Installs composer
   company: clivern
-
-  # If the issue tracker for your role is not on github, uncomment the
-  # next line and provide a value
-  # issue_tracker_url: http://example.com/issue/tracker
 
   # Choose a valid license ID from https://spdx.org - some suggested licenses:
   # - BSD-3-Clause (default)
@@ -43,11 +39,11 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-    - name: Ubuntu
-      versions:
-        - 20.04
-        - 22.04
-        - 18.04
+  - name: Ubuntu
+    versions:
+      - 20.04
+      - 22.04
+      - 18.04
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
