--- a/roles/helium/tasks/pre-deploy.yml
+++ b/roles/helium/tasks/pre-deploy.yml
@@ -17,21 +17,21 @@
   user:
     name: "{{ app_user }}"
     state: present
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
 
 - name: Create the application group
   group:
     name: "{{ app_group }}"
     system: yes
     state: present
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
 
 - name: Add the application user to the application group
   user:
     name: "{{ app_user }}"
     group: "{{ app_group }}"
     state: present
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
 
 - name: Ensure releases directory exists
   file:
@@ -40,7 +40,7 @@
     group: "{{ app_group }}"
     mode: '0755'
     state: directory
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
 
 - name: Ensure shared logs directory exists
   file:
@@ -49,7 +49,7 @@
     group: "{{ app_group }}"
     mode: '0755'
     state: directory
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
 
 - name: Setup logrotate scripts for nginx
   template:
@@ -58,4 +58,4 @@
     mode: "0644"
   with_items: "{{ helium_logrotate_scripts }}"
   when: helium_logrotate_scripts is defined
-  tags: [ argon, helium ]
+  tags: [ oxygen, helium ]
