--- a/galaxy.yml
+++ b/galaxy.yml
@@ -2,13 +2,13 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: ionsio
+namespace: clivern
 
 # The name of the collection. Has the same character restrictions as 'namespace'
 name: argon
 
 # The version of the collection. Must be compatible with semantic versioning
-version: 0.1.0
+version: 1.0.0
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
@@ -21,7 +21,7 @@ authors:
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: PHP Systems Deployment Ansible Playbook
+description: Ansible Playbook to Deploy PHP Services
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
